# agent-nephew

./: .agent.json  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
agent/: config.py  db.py  env.py  lifecycle.py  llm.py  main.py  result.py  root.py  session.py  tracing.py
agent/blocks/: block1.py  block2.py  block3.py
agent/commands/: end.py  history.py  init.py  model.py
agent/handlers/: sigterm.py
agent/tools/: agentignore.py  dispatcher.py  functions.py  schemas.py
agent/ui/: header.py  output.py  prompts.py
docs/: PROJECT_BRIEF_v2.4.md  architecture.md  configuration.md  session-lifecycle.md  tools.md  tracing.md
