[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-nephew"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.7.0",
    "questionary>=2.0.0",
    "pyfiglet>=1.0.2",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "pathspec>=0.12.1",
    "gitpython>=3.1.43",
]

[project.scripts]
nephew = "agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["agent"]
